--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
     
   </div>
   <h1>Auto GST Calculator</h1>
+
+     <p>
+         <input type="">
+     </p>
     <p>
         <input type="text" id="price" name="amount" placeholder="Net Price">
         <label for="amount" class="fa fa-inr"></label>
