--- a/index.html
+++ b/index.html
@@ -21,7 +21,13 @@
   <h1>Auto GST Calculator</h1>
 
      <p>
-         <input type="">
+         <input type="button" id="price" name="amount" placeholder="Net Price">
+         <select>
+             <option value="volvo">Volvo</option>
+             <option value="saab">Saab</option>
+             <option value="opel">Opel</option>
+             <option value="audi">Audi</option>
+         </select>
      </p>
     <p>
         <input type="text" id="price" name="amount" placeholder="Net Price">
