--- a/index.html
+++ b/index.html
@@ -21,14 +21,21 @@
   <h1>Auto GST Calculator</h1>
 
      <p>
-         <input type="button" id="price" name="amount" placeholder="Net Price">
-         <select>
-             <option value="volvo">Volvo</option>
-             <option value="saab">Saab</option>
-             <option value="opel">Opel</option>
-             <option value="audi">Audi</option>
-         </select>
-     </p>
+      <div>
+          <ul class='dropdown'>
+              <li id="top"><a href='index.html'>Dropdown</a>
+                  <span></span>
+                  <ul class="dropdown-box">
+                      <li><a href='#'>item 1</a></li>
+                      <li><a href='#'>item 2</a></li>
+                      <li><a href='#'>item 3</a></li>
+                      <li><a href='#'>item 4</a></li>
+                      <li><a href='#'>item 5</a></li>
+                  </ul>
+              </li>
+          </ul>
+      </div>
+      </p>
     <p>
         <input type="text" id="price" name="amount" placeholder="Net Price">
         <label for="amount" class="fa fa-inr"></label>
