--- a/index.html
+++ b/index.html
@@ -1,61 +1,67 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <title>Auto Loan Calculator</title>
-  <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
-  
-  
-      <link rel="stylesheet" href="css/style.css">
+    <meta charset="UTF-8">
+    <title>Auto Loan Calculator</title>
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 
-  
+
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/dropdown.css">
+
 </head>
 
 <body>
 
-  <div class="calc">
-  <div class="header">
-    
-  </div>
-  <h1>Auto GST Calculator</h1>
+<div class="calc">
+    <div class="header">
 
-     <p>
-      <div>
-          <ul class='dropdown'>
-              <li id="top"><a href='index.html'>Dropdown</a>
-                  <span></span>
-                  <ul class="dropdown-box">
-                      <li><a href='#'>item 1</a></li>
-                      <li><a href='#'>item 2</a></li>
-                      <li><a href='#'>item 3</a></li>
-                      <li><a href='#'>item 4</a></li>
-                      <li><a href='#'>item 5</a></li>
-                  </ul>
-              </li>
-          </ul>
-      </div>
-      </p>
+
+    </div>
+
+    <h1>Auto GST Calculator</h1>
+    <p>
+        Select State: <span class="dropdown-el" id="e12">
+    <input type="radio" name="sortType" value="Relevance" checked="checked" id="sort-relevance"><label
+                for="sort-relevance">Inter-State</label>
+    <input type="radio" name="sortType" value="Popularity" id="sort-best"><label for="sort-best">Intra-State</label>
+  </span>
+    </p>
+    <br>
+    <p>
+        Select Type: <span class="dropdown-el" id="e11">
+    <input type="radio" name="sortType" value="Relevance" checked="checked" id="sort-relevance"><label
+                for="sort-relevance">Exclusive</label>
+    <input type="radio" name="sortType" value="Popularity" id="sort-best"><label for="sort-best">Inclusive</label>
+  </span>
+    </p>
+
+    <br>
+    <br>
+
     <p>
         <input type="text" id="price" name="amount" placeholder="Net Price">
         <label for="amount" class="fa fa-inr"></label>
     </p>
     <p>
-        <input type="text" id="gst" placeholder="gst">
-      <label for="amount" class="fa interest"></label>
+        <input type="text" id="gst" placeholder="GST">
+        <label for="amount" class="fa interest"></label>
     </p>
-  <p>
+    <p>
         <button class="btn" onclick="myFunction()">Calculate</button>
-  </p>
-    <p id="output">CGST</p>
+
+    </p>
+    CGST: <span id="output1"></span><br>
+    SGST: <span id="output2"></span><br>
+    IGST: <span id="output3"></span>
+    <br>
+    Total: <span id="output4"></span>
 </div>
-  <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-
-  
-
-    <script  src="js/index.js"></script>
+<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 
 
+<script src="js/index.js"></script>
 
 
 </body>
