--- a/index.html
+++ b/index.html
@@ -38,17 +38,18 @@
     <!--</p>-->
 
     <p>
-    <div class="container">
-        <h2>Select State</h2>
-        <form>
-            <label class="radio-inline">
-                <input type="radio" name="optradio" checked>Inter-State
-            </label>
-            <label class="radio-inline">
-                <input type="radio" name="optradio">Intra-State
-            </label>
-        </form>
-    </div>
+        <label>Select State:</label>
+        <select>
+            <option value="istate">Inter-State</option>
+            <option value="rstate">Intra-State</option>
+        </select>
+    <p>
+    <p>
+        <label>Select Type:</label>
+        <select>
+            <option value="it">Inclusive</option>
+            <option value="et">Exclusive</option>
+        </select>
     <p>
         <input type="text" id="price" name="amount" placeholder="Net Price">
         <label for="amount" class="fa fa-inr"></label>
@@ -70,11 +71,20 @@
         <button class="btn" onclick="myFunction()">Calculate</button>
 
     </p>
-    CGST: <span id="output1"></span><br>
-    SGST: <span id="output2"></span><br>
-    IGST: <span id="output3"></span>
-    <br>
-    Total: <span id="output4"></span>
+
+    CGST:
+    <div id="output1" class="box1"></div>
+    SGST:
+    <div id="output2" class="box1"></div>
+    IGST:
+    <div id="output3" class="box1"></div>
+    Total:
+    <div id="output4" class="box1"></div>
+    <!--CGST: <span id="output1"></span><br>-->
+    <!--SGST: <span id="output2"></span><br>-->
+    <!--IGST: <span id="output3"></span>-->
+    <!--<br>-->
+    <!--Total: <span id="output4"></span>-->
 </div>
 <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 
